added closing submision functionality

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -6,12 +6,12 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -27,7 +27,7 @@
 .App-link {
   color: #61dafb;
 }
-
+/* 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +35,23 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.container {
+  margin: 50vh;
+  /* flex-direction: column; */
+  /* background-color: #61dafb;  */
+  margin-top: 40vh;
+  padding: 10pt;
+  border-color:black;
+  border-width: 10pt;
+  display: flex;
+}
+
+.row {
+  flex-direction: row;
+}
+
+.column {
+  flex-direction: column;
 }
